# hazard-generator

./: Cargo.toml  README.md  hazards.md
hazard-generator-cli/: Cargo.toml  README.md
hazard-generator-cli/src/: main.rs
src/: error.rs  filters.rs  lib.rs
src/toolchain/: mod.rs  rust.rs
templates/rust/: ontology.rs  risk.rs
tests/: rust.rs
tests/common/: mod.rs
tests/snapshots/rust/: ontology.rs.snap  ontology_with_risk.rs.snap
