[package]
name = "hazard-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
minijinja = "^2.0.1"
json-ld = "^0.16.0"
iref = "^3.1.4"
static-iref = "^3.0.0"
rdf-types = "^0.22.4"
futures = "^0.3.30"

[dev-dependencies]
insta = "^1.38.0"

[workspace]
members = ["hazard-generator-cli"]