[package]
name = "hazard-generator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hazard-generator = { path = ".." }

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
clap = { version = "^4", features = ["derive"] }
